2005-06-02  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmchooser.c, gui/gdmlogin.c, gui/gdmsetup.glade,
	  gui/greeter/greeter.c, gui/greeter/greeter_system.c:
	  Change "reboot" to "restart".  Changed function names
	  and variables from reboot to restart.  It's still
	  "reboot_button" in the GDM2 theme XML files since 
	  changing this would break backwards compatibility.
	  Fixes bug #305939.  Patch for gdmlogin by Nicholas
	  Skehin.  I updated the patch so it also applies to
	  gdmgreeter.
	  
2005-06-02  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmdynamic.c:  Added new file so build works.

2005-05-25  Brian Cameron  <brian.cameron@sun.com>

	* acconfig.h, configure.in, config/gdm.conf.in,
	  config/Xsession.in, README.install: Now allow xevie to
	  be turned on for server-Standard.  This is for better
	  a11y support.  Now use /bin/ksh for Xsession shell if
	  on Solaris instead of /bin/sh.  This is needed to
	  support Solaris users who are using ksh or bash as
	  their $HOME shell.

2005-05-17  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.[ch], daemon/misc.c, daemon/verify-pam.c,
	  docs/C/gdm.xml, gui/Makefile.am, gui/gdmdynamic.c,
	  config/gdm.conf.in: Added support for dynamic Xservers.
	  Fixes enhancement request #168219.  Patch provided by
	  Bob Terek <Robert.Terek@sun.com>.

2005-05-16  Brian Cameron  <brian.cameron@sun.com>

	* gui/modules/AccessKeyMouseEvents.in:  Fixed comments.

2005-05-16  Brian Cameron  <brian.cameron@sun.com>

	* Now use gi18n.h instead of libgnome header files to get
	  access to translation code.  libgnome is still used in
	  vicious-extensions, so this still needs to be cleaned up
	  before bug #117889 is fully fixed.  Patch provided by
	  Christian - Manny Calavera - Neumair.
	* configure.in:  Backed out adding zh_HK to
	  ALL_LINGUAS since it breaks the build.
	
2005-05-16  Danilo \305\240egan  <dsegan@gmx.net>

       * gui/gdmsetup-strings.c: Removed.
       * gui/gdmchooser-strings.c: Removed.
