@@ -1,3 +1,9 @@
+2005-06-10  Brian Cameron  <brian.cameron@sun.com>
+
+	* config/gdm.conf.in: Updated setting for gdmsetup,
+	  gdmlogin, and gdmchooser so they point to the new
+	  installation locations.  Fixes bug #306464.
+
 2005-06-02  Brian Cameron  <brian.cameron@sun.com>
 
 	* gui/gdmchooser.c, gui/gdmlogin.c, gui/gdmsetup.glade,
